# fooML

./: CMakeLists.txt  main.cpp
autograd/: CMakeLists.txt  autograd.cpp
autograd/inc/: autograd.h
tensor/: CMakeLists.txt  marco.h  ops.cuh  tensor.h
tensor/ops/: vec_marcos.h  vector.cu
